# StockUP

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  nasdaq_symbols.csv  pyproject.toml  stock_prices_20241117_214956.csv
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: lint.yaml
.streamlit/: config.toml
app/: main.py
app/apis/: ai_penny_recommendations.py  ai_technical_analysis.py  all_symbols.py  gemini.py  gemini_technical_analysis.py  gemini_with_history.py  stock_info.py
app/components/: news_component.py  support_author.py  top_companies_info.py  top_companies_news.py
app/pages/: about.py  ai_analysis.py  ai_chat.py  general_ai_analysis.py  home.py  stock_info.py
app/setup/: environment.py
app/utils/: invalid_data.py  session.py
app/views/: about.py  general_ai_analysis.py  stock_info.py
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/services/: all_symbols.py  gemini_technical_analysis.py  gemini_with_history.py
backend/app/setup/: environment.py
frontend/: .prettierrc  package.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: config.ts
frontend/src/lib/components/: StockCharts.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  home.css
frontend/src/routes/about/: +page.svelte  about.css
frontend/src/routes/ai_chat/: +page.svelte  ai_chat.css
frontend/src/routes/general_ai_analysis/: +page.svelte  general_ai_analysis.css
frontend/src/routes/stock_information/: +page.svelte  stock_information.css
test/unit/apis/: test_stock_info.py
