[tool.poetry]
name = "stockup"
version = "0.2.0"
description = ""
authors = ["PooriaT <pooria_taghdiri@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
